# gpasman

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.in  gpasman.desktop.in  gpasman.spec.in
DEBIAN/: changelog  control  copyright
pixmaps/: Makefile.am  gpasman.xpm
po/: .gitignore  ChangeLog  POTFILES.in  de.gmo  de.po  gpasman.pot  nl.gmo  nl.po
rc2-1.1.0/: INSTALL  README  librc2.c  rc2.c  rc2.doc
src/: .gitignore  Makefile.am  file.c  file.h  gpasman.c  gpasman.h  gtk-patch.c  gtk-patch.h  i18n-support.h  rc2.h
