dnl Process this file with autoconf to produce a configure script.
AC_INIT([gpasman], [1.9.3], [])
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR(src/gpasman.c)
#AC_PROG_INTLTOOL(0.23)

dnl initilize automake
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(src/config.h)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
# add here additional low level function checks

AC_PATH_PROG(strip, strip)

PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.0.1)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.0.2)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

GTK_VERSION=`$PKG_CONFIG --modversion gtk+-2.0`
AC_MSG_CHECKING([for 2.0.0 >= gtk+])
case $GTK_VERSION in
	2.0.*)
		AC_MSG_RESULT([yes])
		GTK_PATCH="-DGTK_PATCH"
		AC_SUBST(GTK_PATCH)
		;;
	2.*)
		AC_MSG_RESULT([yes])
		;;
	*)
		AC_MSG_RESULT([no])
		AC_MSG_ERROR([gpasman requires at least gtk+ 2.0.0 or higher])
		;;
esac
		
dnl Check for architecture
AC_C_BIGENDIAN

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
# add here additional low level header checks

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_MODE_T

PKG_CHECK_MODULES([HILDON], hildon-1 >= 1.99)
AC_SUBST(HILDON_CFLAGS)
AC_SUBST(HILDON_LIBS)

dnl the final output
AC_OUTPUT([Makefile
	src/Makefile
	pixmaps/Makefile
	gpasman.spec
])

